--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Rosa Calvi                           rcalvi@iac.es
     Benjamin Clement                     benjamin.clement@univ-lyon1.fr
     Antonio Diaz Diaz                    antonio@gnu.org
+    Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
     Stephen Hamer                        stephen.hamer@univ-lyon1.fr
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
