--- a/NEWS
+++ b/NEWS
@@ -107,6 +107,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** Removed features
 
+  Installation: The `--enable-bin-op-*' options that were introduced in
+  Gnuastro 0.3 have been removed. By managing the functions in a better
+  manner (a separate source file for each operator), compilation (when done
+  in parallel) takes about the same time as it took with the default (only
+  four) types before. However, Arithmetic's binary operators can now deal
+  with all ten numeric types natively.
+
   MakeCatalog: `--zeropoint' option doesn't have a short option name any
   more. Previously it was `-z' which was confusing because `-x' and `-y'
   were used to refer to image coordinate positions.
