--- a/THANKS
+++ b/THANKS
@@ -44,9 +44,19 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Lee Spitler                          lee.spitler@mq.edu.au
     Richard Stallman                     rms@gnu.org
     Ole Streicher                        olebole@debian.org
+    Alfred M. Szmidt                     ams@gnu.org
     Ignacio Trujillo                     trujillo@iac.es
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
     Christopher Willmer                  cnaw@as.arizona.edu
+
+
+Teams
+-----
+
+The members of the following teams also provided great help and support.
+
+    GNU French Translation Team:
+        https://savannah.gnu.org/projects/www-fr
 
 
 Institutions
