Minor correction in book's introduction
A minor correction was made in the "Science and its tools" section of the
book to make it more clear. Also, Bob Proulx recently helped with an issue
on the main Git repo, so his name is added to the lists to thank.

--- a/THANKS
+++ b/THANKS
@@ -39,6 +39,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
     Francesco Montanari                  francesco.montanari@openmailbox.org
     William Pence                        william.pence@nasa.gov
+    Bob Proulx                           bob@proulx.com
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Alejandro Serrano Borlaff            asborlaff@ucm.es
     Lee Spitler                          lee.spitler@mq.edu.au
